# zeno_project_2026

./: .gitignore  run.sh
src/sss_package/: CMakeLists.txt
src/sss_package/launch/: sss.launch
src/sss_package/scripts/: image_creator.py
src/zeno_mission/: CMakeLists.txt  nav_status_read.yaml  package.xml
src/zeno_mission/config/: obstacles.yaml  region_params.yaml  targets.yaml  waypoints.yaml  waypoints_phase1.yaml
src/zeno_mission/launch/: zeno_2.launch  zeno_A_py.launch  zeno_all.launch  zeno_coverage_planner.launch  zeno_fase3.launch  zeno_fase3_coverage.launch  zeno_phase0.launch  zeno_phase1.launch  zeno_py.launch
src/zeno_mission/logs/: mission_log_2026-05-29_01-14-26.json  mission_log_2026-05-29_01-40-25.json  mission_log_2026-05-29_01-42-55.json  mission_log_2026-05-29_01-50-11.json  mission_log_2026-05-29_02-57-16.json  mission_log_2026-05-29_03-17-33.json  mission_log_2026-05-29_03-27-56.json  mission_log_2026-05-29_04-36-24.json  mission_log_2026-05-29_04-46-34.json  mission_log_2026-05-29_05-11-14.json  mission_log_2026-05-29_05-30-14.json  mission_log_2026-05-29_05-33-34.json  mission_log_2026-05-29_05-50-34.json  mission_log_2026-05-29_16-40-48.json  mission_log_2026-05-29_16-45-32.json  mission_log_2026-05-29_17-03-06.json  mission_log_2026-05-29_17-11-11.json  phase1_log_20260522_160833.csv  phase1_log_20260529_161933.csv  phase1_log_20260529_162444.csv  phase3_log_20260529_011422.csv  phase3_log_20260529_014250.csv  phase3_log_20260529_015008.csv  phase3_log_20260529_025626.csv  phase3_log_20260529_025713.csv  phase3_log_20260529_031729.csv  (+19 more)
(+258 files in other folders)
