<?xml version="1.0"?>
<package format="2">

  <name>zeno_mission</name>
  <version>0.0.0</version>
  <description>The zeno_mission package</description>

  <maintainer email="student@todo.todo">student</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies -->
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>marta_msgs</build_depend>
  <exec_depend>marta_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>


  </export>

</package>
